Inyecta el Bean corsConfigurationSource creado en CorsConfig